[package]
name = "data_structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
num-bigint = "0.4"
num-traits = "0.2"
ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
plotters = "0.3.5"
rand = "0.8.5"